--- a/main.css
+++ b/main.css
@@ -2,28 +2,64 @@ html,
 body {
   margin: 0;
   padding: 0;
-  font-family: Roboto;
+  font-family: Arial, Helvetica, sans-serif;
   color: #2e3738;
 }
 
-#landscape {
-  background: url("https://s3.amazonaws.com/codecademy-content/projects/sass/landscape.jpg") no-repeat center center fixed;
+#placeholder {
+  height: 75px;
+  width: 100%;
+  visibility: hidden;
+}
+
+#navBar {
+  background-color: #80bdab;
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 75px;
+  width: 100%;
+  z-index: 2;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+#navBar ul {
+  display: flex;
+  list-style-type: none;
+  margin: 0;
+}
+#navBar ul li img {
+  width: 50px;
+  height: 50px;
+  margin-right: 30px;
+}
+
+#top {
+  background: url("assets/desktop1.jpg") no-repeat center center fixed;
+  background-size: cover;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  display: grid;
+  justify-items: center;
+}
+#top img {
+  width: 50px;
+  height: 50px;
+  margin-bottom: 200px;
+}
+
+#bottom {
+  background: url("assets/desktop2.jpg") no-repeat center center fixed;
   background-size: cover;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
 }
 
-#monkeys {
-  background: url("https://s3.amazonaws.com/codecademy-content/projects/sass/monkeys.jpg") no-repeat center center fixed;
-  background-size: cover;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-}
-
-#landscape,
-#monkeys {
+#top,
+#bottom {
   width: 100%;
   height: 100vh;
   perspective: 1px;
@@ -31,19 +67,44 @@ body {
   overflow-x: hidden;
   overflow-y: auto;
 }
-#landscape h1,
-#monkeys h1 {
+#top h1,
+#bottom h1 {
   text-transform: uppercase;
-  font-family: "Bitter", serif;
+  font-family: Arial, Helvetica, sans-serif;
   letter-spacing: 0.06em;
   font-size: 120px;
-  color: #fff;
+  color: #4f8a8b;
   opacity: 0.7;
   text-align: center;
   transform: translateZ(-2px);
+  font-weight: 500;
+}
+#top h3,
+#bottom h3 {
+  text-transform: uppercase;
+  font-family: Arial, Helvetica, sans-serif;
+  letter-spacing: 0.06em;
+  font-size: 75px;
+  color: #4f8a8b;
+  opacity: 0.7;
+  text-align: center;
+  transform: translateZ(-2px);
+  font-weight: 500;
 }
 
-p {
+#middle {
+  display: flex;
+  align-items: center;
+}
+#middle #bioPic {
+  border: 2px solid #fff;
+  border-radius: 50%;
+  filter: drop-shadow(1px 1px 1px #4f8a8b);
+  width: 15%;
+  height: 15%;
+  margin: 5%;
+}
+#middle p {
   width: 70%;
   padding: 5%;
   margin: 0px auto;
@@ -51,6 +112,29 @@ p {
   font-size: 20px;
   font-weight: 200;
   line-height: 1.4;
+  color: #2b580c;
+  text-align: left;
+  font-weight: 500;
+}
+
+#footer {
+  background-color: #80bdab;
+  height: 150px;
+  width: 100%;
+  z-index: 2;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+#footer ul {
+  display: flex;
+  list-style-type: none;
+  margin: 0;
+}
+#footer ul li img {
+  width: 50px;
+  height: 50px;
+  margin-left: 30px;
 }
 
 /*# sourceMappingURL=main.css.map */
