--- a/main.scss
+++ b/main.scss
@@ -17,24 +17,59 @@ html,
 body {
   margin: 0;
   padding: 0;
-  font-family: Roboto;
+  font-family: Arial, Helvetica, sans-serif;
   color: #2e3738;
 }
 
-#landscape {
-  @include parallax-background(
-    "https://s3.amazonaws.com/codecademy-content/projects/sass/landscape.jpg"
-  );
+#placeholder {
+  height: 75px;
+  width: 100%;
+  visibility: hidden;
 }
 
-#monkeys {
-  @include parallax-background(
-    "https://s3.amazonaws.com/codecademy-content/projects/sass/monkeys.jpg"
-  );
+#navBar {
+  background-color: #80bdab;
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 75px;
+  width: 100%;
+  z-index: 2;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+
+  ul {
+    display: flex;
+    list-style-type: none;
+    margin: 0;
+
+    li img {
+      width: 50px;
+      height: 50px;
+      margin-right: 30px;
+    }
+  }
 }
 
-#landscape,
-#monkeys {
+#top {
+  @include parallax-background("assets/desktop1.jpg");
+  display: grid;
+  justify-items: center;
+
+  img {
+    width: 50px;
+    height: 50px;
+    margin-bottom: 200px;
+  }
+}
+
+#bottom {
+  @include parallax-background("assets/desktop2.jpg");
+}
+
+#top,
+#bottom {
   width: 100%;
   height: $parallax-height;
   perspective: 1px;
@@ -44,22 +79,71 @@ body {
 
   h1 {
     text-transform: uppercase;
-    font-family: "Bitter", serif;
+    font-family: Arial, Helvetica, sans-serif;
     letter-spacing: 0.06em;
     font-size: 120px;
-    color: #fff;
+    color: #4f8a8b;
     opacity: 0.7;
     text-align: center;
     transform: translateZ(-2px);
+    font-weight: 500;
+  }
+  h3 {
+    text-transform: uppercase;
+    font-family: Arial, Helvetica, sans-serif;
+    letter-spacing: 0.06em;
+    font-size: 75px;
+    color: #4f8a8b;
+    opacity: 0.7;
+    text-align: center;
+    transform: translateZ(-2px);
+    font-weight: 500;
   }
 }
 
-p {
-  width: 70%;
-  padding: 5%;
-  margin: $center-margin;
-  text-align: center;
-  font-size: 20px;
-  font-weight: 200;
-  line-height: 1.4;
+#middle {
+  display: flex;
+  align-items: center;
+  #bioPic {
+    border: 2px solid #fff;
+    border-radius: 50%;
+    filter: drop-shadow(1px 1px 1px #4f8a8b);
+    width: 15%;
+    height: 15%;
+    margin: 5%;
+  }
+  p {
+    width: 70%;
+    padding: 5%;
+    margin: $center-margin;
+    text-align: center;
+    font-size: 20px;
+    font-weight: 200;
+    line-height: 1.4;
+    color: #2b580c;
+    text-align: left;
+    font-weight: 500;
+  }
+}
+
+#footer {
+  background-color: #80bdab;
+  height: 150px;
+  width: 100%;
+  z-index: 2;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+
+  ul {
+    display: flex;
+    list-style-type: none;
+    margin: 0;
+
+    li img {
+      width: 50px;
+      height: 50px;
+      margin-left: 30px;
+    }
+  }
 }
