--- a/main.css
+++ b/main.css
@@ -47,7 +47,7 @@ body {
 #top img {
   width: 50px;
   height: 50px;
-  margin-bottom: 200px;
+  margin-bottom: 50px;
 }
 
 #bottom {
@@ -56,6 +56,39 @@ body {
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
+  display: grid;
+  justify-content: center;
+}
+#bottom p {
+  width: 400px;
+  margin: 0px auto;
+  text-align: center;
+  font-size: 20px;
+  font-weight: 200;
+  line-height: 1.4;
+  color: #4f8a8b;
+  text-align: justify;
+  font-weight: 500;
+  margin-top: 50px;
+}
+#bottom p span {
+  display: grid;
+  justify-content: right;
+  font-size: 15px;
+}
+#bottom #projects {
+  display: flex;
+  justify-content: center;
+  margin: 0px auto;
+  max-width: 800px;
+  max-height: 150px;
+  overflow: auto;
+  border: 1px solid hidden;
+  border-radius: 3px;
+}
+#bottom #projects img {
+  margin: 0 3px 0 3px;
+  border-radius: 3px;
 }
 
 #top,
@@ -112,8 +145,8 @@ body {
   font-size: 20px;
   font-weight: 200;
   line-height: 1.4;
-  color: #2b580c;
-  text-align: left;
+  color: #4f8a8b;
+  text-align: justify;
   font-weight: 500;
 }
 
