--- a/main.scss
+++ b/main.scss
@@ -60,12 +60,49 @@ body {
   img {
     width: 50px;
     height: 50px;
-    margin-bottom: 200px;
+    margin-bottom: 50px;
   }
 }
 
 #bottom {
   @include parallax-background("assets/desktop2.jpg");
+  display: grid;
+  justify-content: center;
+
+  p {
+    width: 400px;
+    margin: $center-margin;
+    text-align: center;
+    font-size: 20px;
+    font-weight: 200;
+    line-height: 1.4;
+    color: #4f8a8b;
+    text-align: justify;
+    font-weight: 500;
+    margin-top: 50px;
+
+    span {
+      display: grid;
+      justify-content: right;
+      font-size: 15px;
+    }
+  }
+
+  #projects {
+    display: flex;
+    justify-content: center;
+    margin: $center-margin;
+    max-width: 800px;
+    max-height: 150px;
+    overflow: auto;
+    border: 1px solid hidden;
+    border-radius: 3px;
+
+    img {
+      margin: 0 3px 0 3px;
+      border-radius: 3px;
+    }
+  }
 }
 
 #top,
@@ -120,8 +157,8 @@ body {
     font-size: 20px;
     font-weight: 200;
     line-height: 1.4;
-    color: #2b580c;
-    text-align: left;
+    color: #4f8a8b;
+    text-align: justify;
     font-weight: 500;
   }
 }
