added memory project link

--- a/main.scss
+++ b/main.scss
@@ -19,6 +19,7 @@ body {
   padding: 0;
   font-family: Arial, Helvetica, sans-serif;
   color: #2e3738;
+  overflow-y: scroll;
 }
 
 #placeholder {
@@ -80,26 +81,23 @@ body {
     text-align: justify;
     font-weight: 500;
     margin-top: 50px;
-
-    span {
-      display: grid;
-      justify-content: right;
-      font-size: 15px;
-    }
+  }
+  img#scroll {
+    margin: $center-margin;
   }
 
   #projects {
-    display: flex;
-    justify-content: center;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
     margin: $center-margin;
     max-width: 800px;
     max-height: 150px;
-    overflow: auto;
+    overflow-y: scroll;
     border: 1px solid hidden;
     border-radius: 3px;
 
     img {
-      margin: 0 3px 0 3px;
+      margin: 3px 3px;
       border-radius: 3px;
     }
   }
@@ -112,7 +110,7 @@ body {
   perspective: 1px;
   transform: translateZ(-1px);
   overflow-x: hidden;
-  overflow-y: auto;
+  overflow-y: scroll;
 
   h1 {
     text-transform: uppercase;
@@ -176,6 +174,17 @@ body {
     display: flex;
     list-style-type: none;
     margin: 0;
+
+    a {
+      display: flex;
+      align-items: center;
+      color: black;
+      text-decoration: none;
+
+      span {
+        margin-left: 5px;
+      }
+    }
 
     li img {
       width: 50px;
