--- a/main.css
+++ b/main.css
@@ -4,6 +4,7 @@ body {
   padding: 0;
   font-family: Arial, Helvetica, sans-serif;
   color: #2e3738;
+  overflow-y: scroll;
 }
 
 #placeholder {
@@ -71,23 +72,21 @@ body {
   font-weight: 500;
   margin-top: 50px;
 }
-#bottom p span {
-  display: grid;
-  justify-content: right;
-  font-size: 15px;
+#bottom img#scroll {
+  margin: 0px auto;
 }
 #bottom #projects {
-  display: flex;
-  justify-content: center;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
   margin: 0px auto;
   max-width: 800px;
   max-height: 150px;
-  overflow: auto;
+  overflow-y: scroll;
   border: 1px solid hidden;
   border-radius: 3px;
 }
 #bottom #projects img {
-  margin: 0 3px 0 3px;
+  margin: 3px 3px;
   border-radius: 3px;
 }
 
@@ -98,7 +97,7 @@ body {
   perspective: 1px;
   transform: translateZ(-1px);
   overflow-x: hidden;
-  overflow-y: auto;
+  overflow-y: scroll;
 }
 #top h1,
 #bottom h1 {
@@ -163,6 +162,15 @@ body {
   display: flex;
   list-style-type: none;
   margin: 0;
+}
+#footer ul a {
+  display: flex;
+  align-items: center;
+  color: black;
+  text-decoration: none;
+}
+#footer ul a span {
+  margin-left: 5px;
 }
 #footer ul li img {
   width: 50px;
