--- a/stylesheets/projects.css
+++ b/stylesheets/projects.css
@@ -3,7 +3,7 @@
   grid-template-columns: 1fr 1fr 1fr;
   margin: 0px auto;
   max-width: 800px;
-  max-height: 150px;
+  min-height: 60vh;
   overflow-y: scroll;
   border-radius: 3px;
 }
@@ -25,6 +25,12 @@
 }
 #projects a span {
   margin-top: 5px;
+  font-size: 0.85em;
+}
+
+#spacer {
+  height: 100px;
+  width: 100%;
 }
 
 /*# sourceMappingURL=projects.css.map */
