--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -21,6 +21,7 @@ body {
   -o-background-size: cover;
   display: grid;
   justify-items: center;
+  height: 100vh;
 }
 #top img {
   width: 50px;
@@ -31,7 +32,6 @@ body {
 #top,
 #bottom {
   width: 100%;
-  height: 100vh;
   perspective: 1px;
   transform: translateZ(-1px);
   overflow-x: hidden;
@@ -70,6 +70,17 @@ body {
   -o-background-size: cover;
   display: grid;
   justify-content: center;
+  height: 100vh;
+}
+#bottom #projectsHeader {
+  text-transform: uppercase;
+  font-family: Arial, Helvetica, sans-serif;
+  letter-spacing: 0.06em;
+  font-size: 35px;
+  color: #4f8a8b;
+  opacity: 0.7;
+  text-align: center;
+  font-weight: 500;
 }
 #bottom p {
   width: 400px;
@@ -82,6 +93,12 @@ body {
   text-align: justify;
   font-weight: 500;
   margin-top: 50px;
+}
+#bottom #secondDownArrow {
+  justify-self: center;
+  margin-top: 50px;
+  width: 30px;
+  height: 30px;
 }
 #bottom img#scroll {
   margin: 0px auto;
