--- a/css/mobile.css
+++ b/css/mobile.css
@@ -101,6 +101,10 @@
     text-align: center;
   }
 
+  #capstone-project #capstone-project-img-truLocal {
+    height: 300px;
+    background-size: 300px;
+  }
   #capstone-project #capstone-project-img {
     height: 300px;
     background-size: 370px;
