--- a/css/contact.css
+++ b/css/contact.css
@@ -64,7 +64,7 @@
   left: 0;
 }
 
-#main-footer-items {
+#main-footer-items-contact {
   width: 1100px;
   display: flex;
   justify-content: space-between;
