--- a/css/contact.css
+++ b/css/contact.css
@@ -64,12 +64,12 @@
   left: 0;
 }
 
-#main-footer-items-contact {
+#main-footer-items {
   width: 1100px;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin: 0 auto;
+  margin: 3rem auto 0;
 }
 
 .footer-main-name h5 {
