--- a/css/mobile.css
+++ b/css/mobile.css
@@ -190,10 +190,21 @@
     grid-template-columns: 1fr;
     max-width: 375px;
   }
+
+  #contact-bg .wrapper div h2 {
+    margin-top: 2rem;
+  }
+
   #contact-bg {
-    height: 90vh;
+    /* height: 90vh; */
   }
   #main-footer {
     position: relative;
+  }
+  .contact-footer {
+    margin-top: 5rem;
+  }
+  #main-footer .contact-footer-items {
+    margin-top: 0;
   }
 }
